# legaltech

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: github-test-workflow.yaml  testing-and-linting.yaml
backend/: .bandit  .coveragerc  .flake8  mypy.ini  pytest.ini
backend/libs/specter/: pyproject.toml
backend/libs/specter/specter/apiutil/: error_response.py  exception_handler.py
backend/libs/specter/specter/core/: config.py  logger.py
backend/libs/specter/specter/crud/: __init__.py  base.py
backend/libs/specter/specter/crud/shared/: __init__.py  crud_account_user.py
backend/libs/specter/specter/db/: base.py  session.py
backend/libs/specter/specter/models/: __init__.py
backend/libs/specter/specter/models/shared/: __init__.py  account_user.py  tenant.py
backend/libs/specter/specter/schemas/: __init__.py  environment.py  error.py  health.py
backend/libs/specter/specter/schemas/common/: __init__.py  health.py
backend/libs/specter/specter/schemas/shared/: __init__.py  account_user.py  tenant.py
backend/libs/specter/specter/utils/: __init__.py  description.py  exceptions.py
backend/libs/specter/src/apiutil/: error_response.py  exception_handler.py
backend/libs/specter/src/schemas/common/: environment.py
backend/libs/specter/src/utils/: __init__.py  description.py
backend/services/globdoc/: example.env  pyproject.toml  pytest.ini
backend/services/globdoc/app/: main.py
backend/services/globdoc/app/api/: health.py
backend/services/globdoc/app/api/v1/: api.py
backend/services/globdoc/app/schemas/: __init__.py
backend/services/globdoc/docs/: description.md
backend/services/globdoc/src/: app.py
backend/services/globdoc/src/api/: health.py
backend/services/globdoc/src/core/: config.py
backend/services/globdoc/src/schemas/: __init__.py
backend/services/globdoc/tests/: conftest.py
backend/services/globdoc/tests/unit/api/: test_health.py
backend/services/identity/: .env.test  pyproject.toml
backend/services/identity/app/: main.py
backend/services/identity/app/api/v1/: api.py
backend/services/identity/app/api/v1/endpoints/: login.py  register.py
backend/services/identity/app/core/: config.py  security.py
backend/services/identity/app/schemas/: __init__.py  register.py  token.py
backend/services/identity/docs/: description.md
backend/services/identity/tests/: conftest.py
backend/services/identity/tests/unit/api/: test_health.py  test_login.py  test_register.py
backend/services/identity/tests/unit/core/: test_security.py
ci/: testing_for_all_services.sh  testrun_for_all_services.sh
docker/: globdoc.dockerfile  identity.dockerfile  test.dockerfile
docker/entrypoints/: run_test.sh
liquibase/: db-changelog.xml
liquibase/migrations/: 001-create-account-user-table.sql  002-create-tenant-table.sql
