[tool.poetry]
name = "specter"
version = "0.1.0"
description = ""
authors = ["Darshit Kothari <decimal.darshit@gmail.com>"]
readme = "README.md"
packages = [
  { include = "specter" }
]

[tool.poetry.dependencies]
python = "~3.11"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
argh = "^0.31.3"
autoflake = "^2.3.1"
bandit = "^1.8.3"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
sqlalchemy-stubs = "^0.4"
watchdog = "^5.0.2"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "specter",
]
env = [
    "PROJECT_NAME=Global Document Repository (GDR)",
    "SERVICE_NAME=global-document-service",
    "VERSION=1.0.0",
    "DEBUG=true",
    "ENVIRONMENT=local",
    "API_NAME=api",
    "API_VERSION=v1",

    "BACKEND_CORS_ORIGINS=[\"http://localhost\",\"http://localhost:8080\",\"http://localhost:8000\"]",

    "POSTGRES_SERVER=pgdb",
    "POSTGRES_USER=postgres",
    "POSTGRES_PASSWORD=changethis",
    "POSTGRES_DB=postgres"
]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
include = "\\.pyi?$"
exclude = '''
/(
    \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
known_first_party = ["specter"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy"]
skip_glob = ["*/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
