[tool.poetry]
name = "identity"
version = "0.1.0"
description = ""
authors = ["Darshit Kothari <decimal.darshit@gmail.com>"]
readme = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "~3.11"
asyncpg = "^0.30.0"
fastapi = "^0.115.6"
gunicorn = "^23.0.0"
passlib = "^1.7.4"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.34"
starlette-context = "^0.3.6"
starlette-exporter = "^0.23.0"
specter = { path = "../../libs/specter" }
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
argh = "^0.31.3"
autoflake = "^2.3.1"
bandit = "^1.8.3"
black = "^24.8.0"
flake8 = "^7.1.1"
httpx = "^0.24.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
watchdog = "^5.0.2"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "app",
]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
include = "\\.pyi?$"
exclude = '''
/(
    \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
known_first_party = ["src"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy"]
skip_glob = ["*/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
